--- a/info.yml
+++ b/info.yml
@@ -1,24 +1,24 @@
 project:
-  name: 'ISII-2526-GrupoX-Team'
-  owner: 'GrupoX'
-  teamId: 'Team'
+  name: 'ISII-2526-GrupoA-LaCruzada'
+  owner: 'GrupoA'
+  teamId: 'LaCruzada'
   identities: {}
   notifications:
-    email: 'member1@alu.uclm.es,member2@alu.uclm.es,member3@alu.uclm.es,member4@alu.uclm.es'
+    email: 'Josejavier.Maestro@alu.uclm.es,Mario.Navarro4@alu.uclm.es,juan.nunez1@alu.uclm.es,samuel.notario@alu.uclm.es'
   members:
     member1:
-      name: 'Name1'
-      surname: 'Surname1' 
-      githubUsername: 'Name1gitUserName1'
+      name: 'José Javier '
+      surname: 'Maestro López' 
+      githubUsername: 'JoseJavierML'
     member2:
-      name: 'Name2'
-      surname: 'Surname2' 
-      githubUsername: 'Name1gitUserName2'
+      name: 'Mario'
+      surname: 'Navarro de la Cruz' 
+      githubUsername: 'MarioNC04'
     member3:
-      name: 'Name3'
-      surname: 'Surname3' 
-      githubUsername: 'Name1gitUserName3'
+      name: 'Juan'
+      surname: 'Nuñez Cayuela' 
+      githubUsername: 'njuante'
     member4:
-      name: 'Name4'
-      surname: 'Surname4' 
-      githubUsername: 'Name1gitUserName4'
+      name: 'Samuel'
+      surname: 'Notario' 
+      githubUsername: 'xElNotariete'
